--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@gensx/core": "^0.3.2",
     "@gensx/openai": "^0.1.14",
     "@gensx/vercel-ai-sdk": "^0.1.6",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
