--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@ai-sdk/deepseek": "^0.2.15",
     "@ai-sdk/fireworks": "0.1.12",
+    "@ai-sdk/mistral": "^3.0.20",
     "@ai-sdk/openai": "1.2.2",
     "@ai-sdk/react": "^1.1.20",
     "@codemirror/lang-javascript": "^6.2.2",
@@ -94,7 +95,7 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.178.0",
     "usehooks-ts": "^3.1.0",
-    "zod": "^3.23.8"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
