Add ingestion scripts for eCFR and Federal Register data
- Created `ingest-all.ts` to orchestrate ingestion of eCFR and Federal Register.
- Implemented `ingest-ecfr.ts` to fetch and process eCFR data, including chunking and embedding.
- Developed `ingest-federal-register.ts` to retrieve and handle Federal Register documents, with agency mappings and metadata extraction.
- Added error handling and logging for ingestion processes.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "db:pull": "drizzle-kit pull",
     "db:check": "drizzle-kit check",
     "db:up": "drizzle-kit up",
+    "db:ingest": "npx tsx scripts/ingest-all.ts",
     "test": "export PLAYWRIGHT=True && pnpm exec playwright test --workers=4"
   },
   "dependencies": {
@@ -52,6 +53,7 @@
     "@vercel/postgres": "^0.10.0",
     "ai": "4.1.55",
     "bcrypt-ts": "^5.0.2",
+    "chromadb": "^3.3.0",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
