--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "next": "15.6.0-canary.60",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.3.0",
+    "openai": "^6.22.0",
     "orderedmap": "^2.1.1",
     "papaparse": "^5.5.2",
     "postgres": "^3.4.4",
