--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "openai": "^6.22.0",
     "orderedmap": "^2.1.1",
     "papaparse": "^5.5.2",
+    "pdf-parse": "^2.4.5",
     "postgres": "^3.4.4",
     "prosemirror-example-setup": "^1.2.3",
     "prosemirror-inputrules": "^1.4.0",
@@ -98,7 +99,7 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.178.0",
     "usehooks-ts": "^3.1.0",
-    "zod": "^4.3.6"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
