Add Docker Compose configuration for ChromaDB service
- Introduced a new docker-compose.yml file to define the ChromaDB service.
- Configured the service to use the latest ChromaDB image and expose port 8000.
- Added a persistent volume for ChromaDB data storage.
- Set environment variables for persistence and telemetry options.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "db:check": "drizzle-kit check",
     "db:up": "drizzle-kit up",
     "db:ingest": "npx tsx scripts/ingest-all.ts",
+    "chroma": "chroma run --host localhost --port 8000",
     "test": "export PLAYWRIGHT=True && pnpm exec playwright test --workers=4"
   },
   "dependencies": {
