--- a/package.json
+++ b/package.json
@@ -69,7 +69,9 @@
     "framer-motion": "^11.3.19",
     "geist": "^1.3.1",
     "gensx": "^0.3.5",
+    "googleapis": "^171.4.0",
     "lucide-react": "^0.446.0",
+    "marked": "^17.0.3",
     "nanoid": "^5.0.8",
     "next": "15.6.0-canary.60",
     "next-auth": "5.0.0-beta.25",
